# MemorAi

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
database/: db.py
migrations/: env.py  script.py.mako
migrations/versions/: .gitkeep  5d1200ebf26e_initial_migration.py  dd45eb7b24ca_add_user_model_and_link_decks.py
models/: models.py
routers/: __init__.py  auth.py  calendar.py  decks.py  ingest.py  review.py  schedule.py  stats.py  study.py  tutor.py
schemas/: schemas.py
services/: auth.py  gemini.py  pdf_parser.py  sm2.py  streak.py  utils.py  validators.py
static/css/: globals.css
static/js/: app.js  flashcard.js  upload.js
templates/: base.html  calendar.html  dashboard.html  deck_detail.html  decks.html  index.html  landing.html  login.html  signup.html  study.html
