[project]
name = "memorai"
version = "0.1.0"
description = "Turn any PDF into a smart study deck — powered by AI and spaced repetition."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    "google-generativeai>=0.8.0",
    "pymupdf>=1.25.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
